kubernetes/apps/productivity/bambuddy/config/http-route-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bambuddy-internal
  namespace: productivity
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: http
  hostnames:
    - bambuddy.krapulax.home
  rules:
    - backendRefs:
        - name: bambuddy
          namespace: productivity
          port: 8000
